# dev_02

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PRD.md  README.md  TRD.md  azure.yaml  pyproject.toml  run-dev.ps1  기획서.md  아키텍처.md
app/: main.py  models.py  repository.py  schemas.py  services.py
tests/: test_api_flow.py  test_inventory_service.py  test_notifications.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.js  page.js  sw-register.js
web/app/inventory/: page.js
web/app/register/: page.js
web/lib/: api.js
web/public/: manifest.webmanifest  sw.js
